--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.6.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.8.20'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.20'
+    implementation 'com.itextpdf:itextg:5.5.10'
 }
